# zcm2ros

./: README.md  build.sh
dep/: build.sh  geolib_build.sh  libpoco_build.sh  minini_build.sh  opencv_build.sh  zcm_build.sh
src/zcm2ros/: CMakeLists.txt  niias-loko.rviz  package.xml  start.sh.in  track_fusion.conf  zcm2ros.desktop.in
src/zcm2ros/launch/: tf.launch  zcm2ros.launch
src/zcm2ros/msg/: RadarData.msg  RadarDetectionArray.msg  RadarDetectionStamped.msg  RadarInfo.msg  RadarTrackArray.msg  RadarTrackStamped.msg
src/zcm2ros/src/: config.cpp  config.h  converter.cpp  tracks_pack_collector.cpp  tracks_pack_collector.h  tracks_pack_processor.cpp  tracks_pack_processor.h  zcm_deploy.h
src/zcm2ros/src/zcm_types/: zcm_gen.sh
src/zcm2ros/src/zcm_types/neural_obstacle_detector/: object_detector.zcm
src/zcm2ros/src/zcm_types/neural_rail_detector/: rail_detector.zcm
src/zcm2ros/src/zcm_types/stereo_pair/: stereo_pair.zcm
